sort.basic.shell.AlgShellSort.scala.error
Erreur de compilation :
AlgShellSort:4: error: not found: value getNombreValeur
  var b= getNombreValeur()/2
         ^