sort.basic.shell.AlgShellSort.scala.code

def shellSort()  {
	var b= getNombreValeur()/2
  while(b>0){
    for (e<- 1 to getNombreValeurs()-1){
      
   
  var a = getNombreValeurs()
  for ( i<-1 to a-1){
    var v = getValeur(i);
    var j = i
    while(j>0 && getValeur(j-b*e)>v){
      setValeur(j,getValeur(j-b*e))
      j-=1
    }
  setValeur(j,v)  
  }
}
     
    }}
